* Replaced the previous pthread_key implementation with a lockless one   that does not rely on the Be API TLS anymore, and is also more compliant   with respect to the lifespan of the key specific values. * It supports up to 256 different keys, which is equivalent of the solution   that FreeBSD offers. * The main thread now also gets a pthread_thread structure. * Reenabled the POSIX suite test pthread_key_delete_2-1 as we now pass it. * This also fixes bug #1642.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25000 a95241bf-73f2-0310-859d-f6bbb57e9c96